--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   flutter_native_splash: ^2.3.3
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
