added newsDescription and search

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <queries>
+        <package android:name = "com.android.chrome" />
+        <package android:name = "com.chrome.beta" />
+        <package android:name = "com.chrome.dev" />
+        <package android:name = "com.google.android.apps.chrome" />
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
+    <!-- Provide required visibility configuration for API level 30 and above -->
     <application
         android:label="news"
         android:name="${applicationName}"
