--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cached_network_image: ^3.3.0
   provider: ^6.0.5
   shared_preferences: ^2.2.2
+  url_launcher: ^6.1.14
+  permission_handler: ^11.0.1
+  infinite_scroll_pagination: ^4.0.0
 
 dev_dependencies:
   flutter_test:
